[package]
name = "vault13"
version = "0.1.0"
authors = ["Dmytro Lysai <d@emphased.net>"]
license = "GPL-3.0"
edition = "2018"
build ="build.rs"

[profile.release]
debug = true

[build-dependencies]
regex = "1"

[dependencies]
bit-vec = "0.6"
bstring = "0.1"
btoi = "0.4"
byteorder = "1.2"
clap = "2"
downcast-rs = "1.0"
enum-as-inner = "0"
enumflags2 = "0.7"
enum-map = "0.4"
enum-map-derive = "0.4"
enum-primitive-derive = "0.2"
env_logger = "0.10.0"
flate2 = "1"
if_chain = "1"
log = "0.4"
matches = "0.1"
measure_time = "0.8.2"
num-traits = "0.2.15"
rand = "0.8.5"
# Using git because of https://github.com/Rust-SDL2/rust-sdl2/issues/1302.
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["bundled", "static-link", "unsafe_textures"] }
sdl2-sys = { git = "https://github.com/Rust-SDL2/rust-sdl2" }
slotmap = "1"
static_assertions = "1.1"
