[package]
name = "vault13"
version = "0.1.0"
authors = ["Dmytro Lysai <pingw33n@gmail.com>"]
license = "GPL-3.0"
edition = "2018"
build ="build.rs"

[profile.release]
debug = true

[build-dependencies]
regex = "1"

[dependencies]
bit-vec = "0.8"
bstring = "0.1"
btoi = "0.5"
byteorder = "1"
clap = "2"
downcast-rs = "2"
enum-as-inner = "0"
enumflags2 = "0.7"
enum-map = "0.4"
enum-map-derive = "0.4"
enum-primitive-derive = "0.3"
env_logger = "0.11"
flate2 = "1"
if_chain = "1"
log = "0.4"
matches = "0.1"
measure_time = "0.9"
num-traits = "0.2"
rand = "0.9"
sdl2 = { version = "0.38", features = ["unsafe_textures"] }
sdl2-sys = "0.38"
slotmap = "1"
static_assertions = "1"
